<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenTravel</string>
    <string name="title_home">Home</string>
    <string name="title_section1">Kutsuplus</string>
    <string name="title_section2">Family Trip</string>
    <string name="title_section3">Travel Credits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_kutsuplus_fragment">KutsuplusFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_of_trip">Nearest Public stop(Type F for suggestions)</string>
    <string name="end_of_trip">Destination</string>
    <string name="search_hint">Where Do you want to go</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="search_title">Search</string>
    <string name="google_play_services_location_error_resolved">google_play_services_location_error_resolved</string>
    <string name="title_activity_achievements">AchievementsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_user_activity_check">UserActivityCheck</string>
    <string name="create_kutsuplus_trip">Create Trip</string>
    <string name="alert_ok">Ok</string>
    <string name="alert_cancel">Cancel</string>
    <string name="trip_created_greeting">You Are going from</string>
    <string name="title_activity_trip_created">Trip to</string>
    <string name="title_activity_create_trip">Add a Kutsuplus Trip</string>
    <string name="addtrip">Add Trip</string>
    <string name="accept_trip">OK</string>
    <string name="edit_trip">Edit</string>
    <string name="join_trip">Join Trip</string>
    <string name="resolved">error resolved</string>
    <string name="submit">submit</string>

</resources>
